feat: Redesign UI/UX and fix registration logic
